[tool.poetry]
name = "burguer-api"
version = "0.1.0"
description = "A Hamburger service application built on FastAPI"
authors = ["Ezequiel Schneider <ezequielschneiderr@gmail.com>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
